<resources>
    <string name="app_name">Pawnder</string>
    <string name="btnInfo">Welcome to Pawnder! The innovative app to meeting man\'s best friend. Match with your soul mate with a click of a button</string>
    <string name="login">Login</string>
    <string name="Signin">Create Account</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="smtButton">Submit</string>
    <string name="poppyname">Name: Ruger</string>
    <string name="poppyage">Age: 3years old</string>
    <string name="poppyinfo">3 1/2 yr old Ruger is in need of a new home. He is a sweet boy who weighs 75lbs. Ruger is playful, friendly, loyal and affectionate. He would do best in a home with someone who is home often as he does not like to be left alone for long periods of time. He has lived with dogs in the past however he requires a slow and proper introduction and would do best in a home without male dogs.</string>
    <string name="hazelname">Name: Hazel</string>
    <string name="hazelage">Age: 3months</string>
    <string name="hazelinfo">Hey there, I\'m Hazel! Along with my siblings, I will be getting my shots and spayed soon so I can then find my furever home! I too am working on my crate and potty training skills. I live with my brother Russet along with many other dogs and cats. I just love everybody! I don\'t know why but cat toys have always caught my attention more than doggy ones. I love flipping them up in the air and chasing after them. But I also love running over for a nice cuddle session with my hoomans. Foster mom tells me that I\'m going to make someone very happy one day. Could that be you? We do not adopt puppies under 6 months into homes with children under 3 years old</string>
    <string name="adopttitle">Adoption Page</string>
    <string name="hazelgender">Gender: Female</string>
    <string name="hazelbreed">Breed: Chocolate Labrador</string>
    <string name="contactinfo">Contact Information</string>
    <string name="fullname">Enter Full Name:</string>
    <string name="phonenumber">Enter Phone Number:</string>
    <string name="email">Enter Email:</string>


</resources>
