<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdoptionPage">

    <TextView
        android:id="@+id/contactinfo"
        android:layout_width="173dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="276dp"
        android:text="@string/contactinfo"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="135dp"
        android:layout_height="34dp"
        android:layout_alignStart="@+id/contactinfo"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="342dp"
        android:text="@string/fullname" />

    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="137dp"
        android:layout_height="34dp"
        android:layout_alignStart="@+id/contactinfo"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="398dp"
        android:text="@string/phonenumber" />

    <TextView
        android:id="@+id/email"
        android:layout_width="137dp"
        android:layout_height="34dp"
        android:layout_alignStart="@+id/contactinfo"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="82dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="187dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/fullname"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="187dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/phonenumber"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/email"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="125dp"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/hazel" />

    <TextView
        android:id="@+id/adopttitle"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="26dp"
        android:text="@string/adopttitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hazelnameh"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5"
        android:text="@string/hazelname" />

    <TextView
        android:id="@+id/hazelageh"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hazelnameh"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="-1dp"
        android:text="@string/hazelage" />

    <TextView
        android:id="@+id/hazelgender"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hazelageh"
        android:layout_alignStart="@+id/hazelageh"
        android:text="@string/hazelbreed" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="87dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-57dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/hazelnameh"
        app:srcCompat="@drawable/adopt" />

</RelativeLayout>