<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff0000"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="#f0f8ff"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/loginbtn"
        android:layout_width="221dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#f0f8ff"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/usernameLogin"
        android:layout_width="187dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="248dp"
        android:layout_toEndOf="@+id/imageView2"
        android:background="#f0f8ff"
        android:gravity="center"
        android:textSize="15dp"
        android:hint="@string/username"/>

    <TextView
        android:id="@+id/passwordLogin"
        android:layout_width="187dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="223dp"
        android:layout_toEndOf="@+id/imageView2"
        android:background="#f0f8ff"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="15dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="151dp"
        android:text="@string/login" />

</RelativeLayout>